* XmlParser: Made internal Resolver class static.